--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -37,7 +37,9 @@
     "otherModules": [],
     "enableTranslation": true,
     "nativeLanguage": "en",
-    "languages": ["en"],
+    "languages": [
+      "en"
+    ],
     "blueprints": []
   }
 }
