--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
 
     <dependencyManagement>
         <dependencies>
+        
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-csv</artifactId>
+    <version>1.8</version>
+</dependency>        
+		    
             <dependency>
                 <groupId>io.github.jhipster</groupId>
                 <artifactId>jhipster-dependencies</artifactId>
