--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,11 @@
     <artifactId>commons-csv</artifactId>
     <version>1.8</version>
 </dependency>        
-		    
+		    <dependency>
+	<groupId>net.sf.supercsv</groupId>
+	<artifactId>super-csv</artifactId>
+	<version>2.4.0</version>
+</dependency>
             <dependency>
                 <groupId>io.github.jhipster</groupId>
                 <artifactId>jhipster-dependencies</artifactId>
