--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,21 @@
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-csv</artifactId>
     <version>1.8</version>
-</dependency>        
-		    
+</dependency>   
+<!-- https://mvnrepository.com/artifact/net.sf.supercsv/super-csv-parent -->
+<!-- https://mvnrepository.com/artifact/net.sf.supercsv/super-csv -->
+<dependency>
+    <groupId>net.sf.supercsv</groupId>
+    <artifactId>super-csv</artifactId>
+    <version>2.4.0</version>
+</dependency>
+
+<dependency>
+    <groupId>net.sf.supercsv</groupId>
+    <artifactId>super-csv-parent</artifactId>
+    <version>2.4.0</version>
+    <type>pom</type>
+</dependency>
             <dependency>
                 <groupId>io.github.jhipster</groupId>
                 <artifactId>jhipster-dependencies</artifactId>
